# bitcut

./: Cargo.toml  justfile
src/: lib.rs
