[package]
name = "bitcut"
version = "0.1.4"
edition = "2021"
description = "Create and apply binary patches"
license = "MIT"
repository = "https://github.com/tochka-public/bitcut"
readme = "README.md"
categories = ["command-line-utilities", "compression"]
keywords = ["binary", "bin", "diff", "patch"]
exclude = ["/.github", "/target"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "bitcut"
required-features = ["cli"]
path = "src/main.rs"

[dependencies]
rustc-hash = "2.1"

[dependencies.clap]
version = "4.5"
features = ["derive"]
optional = true

[dependencies.anyhow]
version = "1.0"
optional = true

[features]
default = ["cli"]
cli = ["clap", "anyhow"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rstest = "*"

[[bench]]
name = "my_benchmark"
harness = false
